nullaway_error_7B06A320-47E6-4FEC-9082-66379913EA98.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-orm/src/main/java/org/springframework/orm/jpa/persistenceunit/DefaultPersistenceUnitManager.java:497: error: [NullAway] dereferenced expression this.persistenceUnitInfos.get(name) is @Nullable
				msg.append(this.persistenceUnitInfos.get(name).getPersistenceUnitRootUrl());
				                                              ^
    (see http://t.uber.com/nullaway )
